--- a/pricing/pricing.css
+++ b/pricing/pricing.css
@@ -1,3 +1,6 @@
+/* *{
+  color: transparent;
+} */
 body {
   background-image: linear-gradient(180deg, var(--bs-secondary-bg), var(--bs-body-bg) 100px, var(--bs-body-bg));
 }
